--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
         id: cuda-toolkit
         with:
           cuda: "12.1.0"
+          method: network
+          sub-packages: '["nvcc"]'
+          non-cuda-sub-packages: '["libcurand", "libcufft"]'
 
       - name: Build Binary
         run: go build -v
