--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           cuda: "12.1.0"
           method: network
-          sub-packages: '["nvcc","libcurand", "libcufft"]'
+          sub-packages: '["nvcc"]'
           non-cuda-sub-packages: '["libcurand", "libcufft"]'
 
       - name: Build Binary
