--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,12 @@ jobs:
 
       - name: Build Binary
         run: go build -v -o ./build/amumax
+        env:
+          NVCC_CCBIN: /usr/bin/gcc
+          CGO_CFLAGS: "-I${LD_LIBRARY_PATH}"
+          CGO_LDFLAGS: "-lcufft -lcurand -lcuda -L${LD_LIBRARY_PATH} -Wl,-rpath -Wl,$ORIGIN/$RPATH"
+          CGO_CFLAGS_ALLOW: '(-fno-schedule-insns|-malign-double|-ffast-math)'
+          NVCCFLAGS: "-std=c++03 -ccbin=$NVCC_CCBIN --compiler-options -Werror --compiler-options -Wall -Xptxas -O3 -ptx"
 
       - name: Get CUDA Libs
         run: |
@@ -39,7 +45,7 @@ jobs:
           echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions@example.com"
-          git tag $TAG_NAME
+          git tag -f $TAG_NAME
           git push origin $TAG_NAME
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
