I'm sorry I made a mistake in that previous commit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           cuda: "12.1.0"
           sub-packages: '["cudart", "nvcc"]'
-          non-cuda-sub-packages: '["cufft","curand"]'
+          non-cuda-sub-packages: '["libcufft","libcurand"]'
           method: 'network'
 
       - name: Build Binary
