Fix version in gh action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           echo $VERSION
           LDFLAGS="-X github.com/MathieuMoalic/amumax/engine.VERSION=$VERSION"
           echo $LDFLAGS
-          go build -v -o ./build/amumax -ldflags $LDFLAGS
+          go build -v -o ./build/amumax -ldflags "$LDFLAGS"
         env:
           VERSION: date +'%Y.%m.%d'
           NVCC_CCBIN: /usr/bin/gcc
