--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,14 +31,14 @@ jobs:
 
       - name: Build Binary
         run: |
-          VERSION=$(date +'%Y.%m.%d')
+          export VERSION=$(date +'%Y.%m.%d')
           echo $VERSION
-          LDFLAGS="-X github.com/MathieuMoalic/amumax/engine.VERSION=$VERSION"
+          export LDFLAGS="-X github.com/MathieuMoalic/amumax/engine.VERSION=$VERSION"
           echo $LDFLAGS
-          NVCC_CCBIN=/usr/bin/gcc
-          CGO_CFLAGS="-I${LD_LIBRARY_PATH}"
-          CGO_LDFLAGS="-lcufft -lcurand -lcuda -L${LD_LIBRARY_PATH} -Wl,-rpath -Wl,\$ORIGIN/$RPATH"
-          CGO_CFLAGS_ALLOW='(-fno-schedule-insns|-malign-double|-ffast-math)'
+          export NVCC_CCBIN=/usr/bin/gcc
+          export CGO_CFLAGS="-I${LD_LIBRARY_PATH}"
+          export CGO_LDFLAGS="-lcufft -lcurand -lcuda -L${LD_LIBRARY_PATH} -Wl,-rpath -Wl,\$ORIGIN/$RPATH"
+          export CGO_CFLAGS_ALLOW='(-fno-schedule-insns|-malign-double|-ffast-math)'
           NVCCFLAGS="-std=c++03 -ccbin=$NVCC_CCBIN --compiler-options -Werror --compiler-options -Wall -Xptxas -O3 -ptx"
           go build -v -o ./build/amumax -ldflags "$LDFLAGS"
 
