--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
-		"@types/plotly.js-dist-min": "^2.3.4",
 		"@types/prismjs": "^1.26.4",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
@@ -33,7 +32,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"plotly.js-dist-min": "^2.32.0",
+		"chart.js": "^4.4.3",
+		"chartjs-plugin-zoom": "^2.0.1",
 		"prismjs": "^1.29.0"
 	}
 }
