--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
 		"@types/prismjs": "^1.26.4",
+		"@types/three": "^0.164.1",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.56.0",
@@ -34,6 +35,7 @@
 	"dependencies": {
 		"chart.js": "^4.4.3",
 		"chartjs-plugin-zoom": "^2.0.1",
-		"prismjs": "^1.29.0"
+		"prismjs": "^1.29.0",
+		"three": "^0.164.1"
 	}
 }
