--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/msgpack-lite": "^0.1.11",
 		"@types/prismjs": "^1.26.4",
 		"@types/three": "^0.164.1",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -33,8 +34,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@msgpack/msgpack": "^3.0.0-beta2",
 		"chart.js": "^4.4.3",
 		"chartjs-plugin-zoom": "^2.0.1",
+		"msgpack-lite": "^0.1.26",
 		"prismjs": "^1.29.0",
 		"three": "^0.164.1"
 	}
