--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
 		"@msgpack/msgpack": "^3.0.0-beta2",
 		"chart.js": "^4.4.3",
 		"chartjs-plugin-zoom": "^2.0.1",
+		"echarts": "^5.5.1",
 		"msgpack-lite": "^0.1.26",
 		"prismjs": "^1.29.0",
 		"three": "^0.164.1"
