--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,9 +2,8 @@ linters-settings:
   staticcheck:
     checks:
       - all
-      - '-SA1019' # disable the rule SA1000
+      - "-SA1019" # disable the rule SA1000
 
-
-run:
-  skip-dirs:
-    - cuda
+# issues:
+#   exclude-dirs:
+#     - cuda
