--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,36 +12,44 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.4",
+		"@msgpack/msgpack": "^3.0.0-beta2",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.5.26",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@types/echarts": "^4.9.22",
 		"@types/eslint": "^9.6.1",
+		"@types/eslint__js": "^8.42.3",
+		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/msgpack-lite": "^0.1.11",
 		"@types/prismjs": "^1.26.4",
 		"@types/three": "^0.168.0",
 		"@typescript-eslint/eslint-plugin": "^8.5.0",
 		"@typescript-eslint/parser": "^8.5.0",
-		"eslint": "^9.10.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.1",
-		"tslib": "^2.7.0",
-		"typescript": "^5.6.2",
-		"vite": "^5.4.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@msgpack/msgpack": "^3.0.0-beta2",
-		"@types/echarts": "^4.9.22",
+		"autoprefixer": "^10.4.20",
 		"chart.js": "^4.4.4",
 		"chartjs-plugin-zoom": "^2.0.1",
 		"echarts": "^5.5.1",
+		"eslint": "^9.10.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.43.0",
+		"flowbite": "^2.5.1",
+		"flowbite-svelte": "^0.46.16",
+		"flowbite-svelte-icons": "^1.6.1",
+		"globals": "^15.0.0",
 		"msgpack-lite": "^0.1.26",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"prismjs": "^1.29.0",
-		"three": "^0.168.0"
-	}
+		"svelte": "^4.2.19",
+		"svelte-check": "^4.0.1",
+		"tailwindcss": "^3.4.10",
+		"three": "^0.168.0",
+		"tslib": "^2.7.0",
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.4.3"
+	},
+	"type": "module",
+	"dependencies": {}
 }
