--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
-	"devDependencies": {
+	"devDependencies": {},
+	"type": "module",
+	"dependencies": {
 		"@msgpack/msgpack": "^3.0.0-beta2",
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.5.26",
@@ -49,7 +51,5 @@
 		"typescript": "^5.6.2",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.3"
-	},
-	"type": "module",
-	"dependencies": {}
+	}
 }
