--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,12 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
-	"devDependencies": {},
 	"type": "module",
 	"dependencies": {
 		"@msgpack/msgpack": "^3.0.0-beta2",
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@sveltejs/vite-plugin-svelte": "4.0.2",
 		"@types/echarts": "^4.9.22",
 		"@types/eslint": "^9.6.1",
 		"@types/eslint__js": "^8.42.3",
@@ -50,6 +49,6 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.18.0",
-		"vite": "^6.0.3"
+		"vite": "5.4.11"
 	}
 }
