--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,21 +3,21 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
-version: 2
-updates:
-  - package-ecosystem: "gomod"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    groups:
-      dev-dependencies:
-        patterns:
-          - "*"
-  - package-ecosystem: "npm"
-    directory: "/frontend/"
-    schedule:
-      interval: "weekly"
-    groups:
-      dev-dependencies:
-        patterns:
-          - "*"
+# version: 2
+# updates:
+#   - package-ecosystem: "gomod"
+#     directory: "/"
+#     schedule:
+#       interval: "weekly"
+#     groups:
+#       dev-dependencies:
+#         patterns:
+#           - "*"
+#   - package-ecosystem: "npm"
+#     directory: "/frontend/"
+#     schedule:
+#       interval: "weekly"
+#     groups:
+#       dev-dependencies:
+#         patterns:
+#           - "*"
