Fix more linter warnings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,13 +25,95 @@ linters:
         - unsafeptr
     revive:
       rules:
-        # - name: exported
-        - name: var-naming
-        - name: if-return
-        - name: indent-error-flow
+        # - name: add-constant
+        - name: argument-limit
+        - name: atomic
+        - name: banned-characters
+        - name: bare-return
         - name: blank-imports
-        - name: useless-break
+        - name: bool-literal-in-expr
+        - name: call-to-gc
+        # - name: cognitive-complexity
+        - name: comment-spacings
+        - name: comments-density
+        - name: confusing-naming
+        - name: confusing-results
+        - name: constant-logical-expr
+        - name: context-as-argument
+        - name: context-keys-type
+        # - name: cyclomatic
+        - name: datarace
+        # - name: deep-exit
+        - name: defer
+        - name: dot-imports
+        - name: duplicated-imports
+        - name: early-return
+        - name: empty-block
+        - name: empty-lines
+        - name: enforce-map-style
+        - name: enforce-repeated-arg-type-style
+        - name: enforce-slice-style
+        - name: enforce-switch-style
+        - name: error-naming
+        - name: error-return
+        - name: error-strings
+        - name: errorf
+        # - name: exported
+        - name: file-header
+        - name: file-length-limit
+        - name: filename-format
+        - name: flag-parameter
+        - name: function-length
+        # - name: function-result-limit
+        - name: get-return
+        - name: identical-branches
+        - name: if-return
+        - name: import-alias-naming
+        - name: import-shadowing
+        - name: imports-blocklist
+        - name: increment-decrement
+        - name: indent-error-flow
+        # - name: line-length-limit
+        - name: max-control-nesting
+        - name: max-public-structs
+        - name: modifies-parameter
+        - name: modifies-value-receiver
+        - name: nested-structs
+        - name: optimize-operands-order
         - name: package-comments
+        - name: range-val-address
+        - name: range-val-in-closure
+        - name: range
+        - name: receiver-naming
+        - name: redefines-builtin-id
+        - name: redundant-build-tag
+        - name: redundant-import-alias
+        - name: redundant-test-main-exit
+        - name: string-format
+        - name: string-of-int
+        - name: struct-tag
+        - name: superfluous-else
+        - name: time-date
+        - name: time-equal
+        - name: time-naming
+        - name: unchecked-type-assertion
+        - name: unconditional-recursion
+        - name: unexported-naming
+        - name: unexported-return
+        - name: unhandled-error
+        - name: unnecessary-format
+        - name: unnecessary-stmt
+        - name: unreachable-code
+        - name: unused-parameter
+        - name: unused-receiver
+        - name: use-any
+        - name: use-errors-new
+        - name: use-fmt-print
+        - name: useless-break
+        - name: var-declaration
+        - name: var-naming
+        - name: waitgroup-by-value
+
 
 issues:
   exclude-use-default: false
